--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,13 @@
 
 .page-enter {
   opacity: 0;
-  transform: scale(1.1);
+  transform: scale(1);
 }
 
 .page-enter-active {
   opacity: 1;
   transform: scale(1);
-  transition: opacity 300ms, transform 300ms;
+  transition: opacity 700ms, transform 700ms ease-out;
 }
 
 @keyframes App-logo-spin {
