--- a/src/components/Layout/Navbar.module.css
+++ b/src/components/Layout/Navbar.module.css
@@ -16,8 +16,10 @@
   padding: 0;
   margin: 0;
   align-items: center;
-  justify-content: center;
+  justify-content: right;
 }
+
+
 
 .header li {
   margin: 0 1rem;
