--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,16 +1,25 @@
+.about-section {
+  position: relative ;
+  padding-top: 150px ;
+  padding-bottom: 30px ;
+  background-image: var(--section-background-color) ;
+  color: white ;
+}
+
+.about h2{
+  text-align: center;
+}
 
 
-.fade-enter {
-  opacity: 0;
+
+.quote-card-view {
+  border: none ;
+  color: white ;
+  background-color: transparent ;
 }
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 200ms;
-}
-.fade-exit {
-  opacity: 1;
-}
-.fade-exit-active {
-  opacity: 0;
-  transition: opacity 200ms;
+
+.about-activity {
+  list-style: none ;
+  text-align: left ;
+  padding-left: 1px ;
 }
