--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,17 @@
 .page-enter-active {
   opacity: 1;
   transform: scale(1);
-  transition: opacity 700ms, transform 700ms ease-out;
+  transition: opacity 700ms, transform 700ms;
+}
+.page-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.page-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 300ms, transform 300ms;
 }
 
 @keyframes App-logo-spin {
