--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -4,13 +4,13 @@
   width: 100%;
   height: 5rem;
   background-color: rgb(22, 11, 11);
-  display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 0 10%;
   position: fixed;
 } */
 .header {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 5rem;
   background-color: rgb(22, 11, 11);
@@ -40,6 +40,7 @@
 }
 
 .header ul {
+  float: right;
   height: 100%;
   list-style: none;
   display: flex;
