--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,17 @@
 .main-image img {
-  width: 25%;
+  width: 30%;
+  float: right;
   height: auto;
+  padding-bottom: 4rem;
+}
+
+.home {
+  width: 100%;
+  padding: 50px;
+  border: solid silver;
+  border-width: 15px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
 }
 
 
