--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -8,6 +8,7 @@
 .home {
   width: 100%;
   padding: 50px;
+  margin-top: 2rem;
   border: solid silver;
   border-width: 15px;
   margin-bottom: 10px;
