--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -9,8 +9,10 @@
   width: 100%;
   padding: 50px;
   margin-top: 2rem;
-  border: solid silver;
+  border: solid #bee0f3;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-width: 15px;
+  border-radius: 5px;
   margin-bottom: 10px;
   box-sizing: border-box;
 }
