--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -2,7 +2,8 @@
   width: 30%;
   float: right;
   height: auto;
-  padding-bottom: 4rem;
+  /* padding-bottom: 4rem; */
+  border-radius: 15px;
 }
 
 .home {
