--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   background: #282c34;
+  padding-bottom: 4rem;
+    /* background: linear-gradient(#1f1f1f, #5a5959) ; */
+  color: rgb(132, 233, 132)
 }
 
 .App-logo {
