--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,5 +1,7 @@
 .card {
   background: rgb(240, 198, 198);
+  /* background: linear-gradient(#1f1f1f, #5a5959) ; */
+
   color: black;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 5px;
