--- a/src/components/UI/Navbar.module.css
+++ b/src/components/UI/Navbar.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   width: 100%;
   height: 5rem;
-  background-color: rgb(22, 11, 11);
+  background: rgb(19, 0, 0);
   padding: 0 10%;
   display: flex;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  color: rgb(132, 233, 132);
+  color: rgb(240, 198, 198);
 
 }
 
@@ -66,7 +66,7 @@
 .header a:hover,
 .header a:active,
 .header a.active {
-  color: rgb(132, 233, 132);
+  color: rgb(167, 185, 159);
   padding-bottom: 0.25rem;
   border-bottom: 4px solid #95bcf0;
 }
