--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@ html {
   /* font-family: 'DM Serif Display', serif; */
   font-family: 'Patua One', cursive;
   /* background: #1f1f1f; */
-  color: rgb(132, 184, 233);
+  color: rgb(27, 41, 68);
   /* color: rgb(167, 185, 159); */
 
-  background: linear-gradient(to right, #1f1f1f, #948e8e) ;
+  background: linear-gradient(to right, #614545, #c0a4a4) ;
 
 }
 
