--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@ html {
   /* font-family: 'DM Serif Display', serif; */
   font-family: 'Patua One', cursive;
   /* background: #1f1f1f; */
-  color: rgb(27, 41, 68);
+  color: rgb(119, 140, 182);
   /* color: rgb(167, 185, 159); */
 
-  background: linear-gradient(to right, #614545, #c0a4a4) ;
+  background: linear-gradient(to right, #000000, #110404) ;
 
 }
 
