--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,7 +1,13 @@
-.about h2{
+.projects h2{
   text-align: center;
 }
 
+.projects{
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgb(46, 45, 45) 100%), url('../../assets/testShot.png');
+  background-position: top;
+  /* background-repeat: no-repeat; */
+  /* opacity: 0.7; */
+}
 .icons {
   background: #85c8ee;
   font-size: 4.5em ;
