--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,26 @@
   transition: opacity 300ms, transform 300ms;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media screen and (max-width: 960px) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+   .page {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+  }
+  
+  .page-enter {
+    opacity: 0;
+  }
+  
+  .page-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 700ms, transform 700ms;
+  }
+
 }
 
 
