--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,16 @@
   color: white;
 }
 
+.App-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+
 .App-link {
   color: #61dafb;
 }
