--- a/src/components/UI/Navbar.css
+++ b/src/components/UI/Navbar.css
@@ -137,9 +137,9 @@
 }
 
 @media screen and (max-width: 960px) {
-  /* .NavLink {
+  .NavLink {
     position: relative;
-  } */
+  }
 
   .nav-menu {
     display: flex;
